Do not convert empty paint devices, but convert their default pixel

BUG:328895